Supply search: fix site selection stretching horizontally with long site names

--- a/webapp/src/main/resources/public/supplies/supplies.css
+++ b/webapp/src/main/resources/public/supplies/supplies.css
@@ -120,6 +120,7 @@ table.results-table tbody tr:nth-child(even) {
 
 .selection-td {
     height: 50px;
+    max-width: 150px;
 }
 
 .toggle-all-button {
